--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
         google()
         jcenter()
 
-        group = 'com.github.BBongKim'
+        group = 'com.github.SoTree17'
     }
 }
 
