--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    id 'com.github.dcendents.android-maven' // 추가
+    id 'com.github.dcendents.android-maven'
 }
 
 android {
