--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     // Gson converter
     compileOnly 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    androidTestImplementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Retrofit
     compileOnly 'com.squareup.retrofit2:retrofit:2.9.0'
 }
